fixed back-button on mobile

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1078,10 +1078,6 @@ footer {
 		margin: 0 10px;
 	}
 
-	.back_button {
-		right: 30vw;
-	}
-
 	nav {
 		.nav__links {
 			padding: 1.5em 0.5em;
